# maketribe

./: .gitattributes  .gitignore  maketribe-image-editing.ipynb
backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: BidsPage.css  BidsPage.js  BuyerRegistration.js  ConsumerLandingPage 2.js  ConsumerLandingPage.css  ConsumerPage 2.js  CreateNewDesignPage 2.css  CreateNewDesignPage 2.js  CreateNewDesignPage.js  CreateVariationsPage.css  CreateVariationsPage.js  Footer.css  Footer.js  Header 2.css  LandingPage 2.js  LandingPageHeader 2.css  LandingPageHeader.js  LoginPage 2.css  LoginPage 2.js  MainContent.css  MainContent.js  ModifyExistingDesignPage 2.css  ModifyExistingDesignPage.js  PreOrdersPage.js  PrincipalLandingPage.css  PrincipalLandingPajeHeader.css  PrincipalLandingPajeHeader.js  SellerRegistration 2.css  Sidebar 2.js  Sidebar.css  useImage 2
server/: .env  package.json  server.js
src/: App.css  App.js
src/components/: BuyerRegistration.css  ConsumerHeader.css  ConsumerHeader.js  ConsumerPage.css  ConsumerPage.js  Footer.css  Header.css  Header.js  ImageEditor.js  LandingPage.css  LandingPage.js  PreOrdersPage.css  PrincipalLandingPage.js  SellerRegistration.js
