[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Maketribe Designs Creation"
authors = ["Fred Bone"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
openai = "^1.29.0"
python-dotenv = "^0.19.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"